Add discussion of clustering

--- a/jgdfit/references.bib
+++ b/jgdfit/references.bib
@@ -13,3 +13,26 @@ Version 2018-1},
     EPRINT = {https://stats.stackexchange.com/q/422115},
     URL = {https://stats.stackexchange.com/q/422115}
 }
+@MISC {greenclust,
+  URL = {https://cran.r-project.org/package=greenclust},
+  TITLE = {Combine Categories Using Greenacre's Method},
+  AUTHOR = {Jeff Letton},
+  HOWPUBLISHED = {CRAN},
+  NOTE = {GitHub:https://github.com/JeffJetton/greenclust}
+}
+@MISC {Greenacre,
+  NOTE = {Greenacre, M.J. Journal of Classification (1988) 5: 39. https://doi.org/10.1007/BF01901670},
+  AUTHOR = {Greenacre, M.J.},
+  JOURNAL = {Journal of Classification},
+  YEAR = {1988},
+  VOLUME = {5}, ISSUE = {39},
+  URL = {https://doi.org/10.1007/BF01901670}
+}
+@MISC {partitioning,
+  AUTHOR = {Jackson, B, et. al.},
+  TITLE = {An algorithm for optimal partitioning of data on an interval},
+  JOURNAL = {IEEE Signal Processing Letters},
+  VOLUME = 12,
+  ISSUE = 2,
+  YEAR = 2005
+}
