Write-up Shapiro-Wilk test process

--- a/jgdfit/cluster.tex
+++ b/jgdfit/cluster.tex
@@ -1,4 +1,4 @@
-\section{Clustering}
+\section{Clustering for Chi-Square}
 
 In order to apply the Chi-Square metric, we need to cluster grades which
 were given by the judge less than six times together with neighboring
@@ -57,7 +57,7 @@ avoids having the algorithm try all combinations of zero sized clusters.
 \subsection{Number of grades}
 
 The grade clusters must satisfy two constraints in order to get a goodness
-of fit metrick from the Chi-Square method.
+of fit metric from the Chi-Square method.
 
 First, there need to be at least six clusters. The number of degrees of freedom
 for the Chi-Square metric is then, at minimum six minus one, minus two for
