--- a/jgdfit/references.bib
+++ b/jgdfit/references.bib
@@ -5,6 +5,11 @@ Statistical Method for Processing Scores
 Version 2018-1},
   URL= {https://www.fai.org/sites/default/files/documents/section6_part1_appendixfps_v2018_1.pdf}
 }
+@MISC {Bates,
+  TITLE = {Bates Distribution},
+  HOWPUBLISHED = {Wikipedia},
+  URL = { https://en.wikipedia.org/wiki/Bates_distribution }
+}
 @MISC {BruceET,
     TITLE = {Test fit of discrete data distribution to normal distribution},
     AUTHOR = {BruceET (https://stats.stackexchange.com/users/85665/bruceet)},
