Switch to png plots

--- a/jgdfit/main.tex
+++ b/jgdfit/main.tex
@@ -1,11 +1,10 @@
-\documentclass[twocolumn]{article}
+\documentclass{article}
 \title{Distribution of grades from aerobatic judges, goodness of fit to normal}
 \author{Douglas Lovell}
 \date{November, 2019}
 
-\usepackage{svg}
-\svgpath{{figures/}}
-\svgsetup{width=\columnwidth}
+\usepackage{graphicx}
+\graphicspath{{figures/}}
 
 \begin{document}
 \maketitle
