Make typesetting adjustments

--- a/jgdfit/main.tex
+++ b/jgdfit/main.tex
@@ -1,16 +1,18 @@
-\documentclass{article}
+\documentclass[10pt,twocolumn]{article}
+
 \title{Distribution of grades from aerobatic judges, goodness of fit to normal}
 \author{Douglas Lovell}
 \date{November, 2019}
 
+\usepackage{newclude}
 \usepackage{graphicx}
 \graphicspath{{figures/}}
 
 \begin{document}
 \maketitle
-\include{grading}
-\include{cluster}
-\include{shapiro}
-\include{results_all}
+\include*{grading}
+\include*{cluster}
+\include*{shapiro}
+\include*{results_all}
 %\bibliography{references.bib}
 \end{document}
