Setup references and bibliography

--- a/jgdfit/cluster.tex
+++ b/jgdfit/cluster.tex
@@ -8,14 +8,14 @@ Example
 
 The optimal method for doing this is the one that has least impact on
 the mean and variance of the data. The method described by
-Greenacre \ref{Greenacre}
+Greenacre \cite{Greenacre}
 and implemented by the
-greenclust \ref{greenclust}
+greenclust \cite{greenclust}
 R package provides one; however, it reorders the clusters.
 We need to join only adjacent clusters, to maintain the order.
 
 Another paper
-\ref {partitioning}
+\cite{partitioning}
 from ten authors at NASA Ames and San Jose State University
 maintains order of partitions, but does not enable the constraint of
 minimum partition size. This and other algorithms for k-shape
