--- a/jgdfit/main.tex
+++ b/jgdfit/main.tex
@@ -14,5 +14,7 @@
 \include*{cluster}
 \include*{shapiro}
 \include*{results_all}
-%\bibliography{references.bib}
+
+\bibliographystyle{plain}
+\bibliography{references}
 \end{document}
