--- a/jgdfit/references.bib
+++ b/jgdfit/references.bib
@@ -1,16 +1,16 @@
-@MISC {FPS,
+@misc{FPS,
   TITLE= {FAI Sporting Code, Section 6
 International Aerobatic Events
 Statistical Method for Processing Scores
 Version 2018-1},
   URL= {https://www.fai.org/sites/default/files/documents/section6_part1_appendixfps_v2018_1.pdf}
 }
-@MISC {Bates,
+@misc{Bates,
   TITLE = {Bates Distribution},
   HOWPUBLISHED = {Wikipedia},
   URL = { https://en.wikipedia.org/wiki/Bates_distribution }
 }
-@MISC {BruceET,
+@misc{BruceET,
     TITLE = {Test fit of discrete data distribution to normal distribution},
     AUTHOR = {BruceET (https://stats.stackexchange.com/users/85665/bruceet)},
     HOWPUBLISHED = {Cross Validated},
@@ -18,14 +18,14 @@ Version 2018-1},
     EPRINT = {https://stats.stackexchange.com/q/422115},
     URL = {https://stats.stackexchange.com/q/422115}
 }
-@MISC {greenclust,
+@misc{greenclust,
   URL = {https://cran.r-project.org/package=greenclust},
   TITLE = {Combine Categories Using Greenacre's Method},
   AUTHOR = {Jeff Letton},
   HOWPUBLISHED = {CRAN},
   NOTE = {GitHub:https://github.com/JeffJetton/greenclust}
 }
-@MISC {Greenacre,
+@misc{Greenacre,
   NOTE = {Greenacre, M.J. Journal of Classification (1988) 5: 39. https://doi.org/10.1007/BF01901670},
   AUTHOR = {Greenacre, M.J.},
   JOURNAL = {Journal of Classification},
@@ -33,7 +33,7 @@ Version 2018-1},
   VOLUME = {5}, ISSUE = {39},
   URL = {https://doi.org/10.1007/BF01901670}
 }
-@MISC {partitioning,
+@misc{partitioning,
   AUTHOR = {Jackson, B, et. al.},
   TITLE = {An algorithm for optimal partitioning of data on an interval},
   JOURNAL = {IEEE Signal Processing Letters},
