--- a/jgdfit/shapiro.tex
+++ b/jgdfit/shapiro.tex
@@ -26,7 +26,7 @@ extremely rarely, with very low probability, outside of the range -2.5 to
 2.5.
 
 We chose to use for standard deviation a value that approximates the
-distribution of Bates \ref{Bates}. The Bates distribution has the
+distribution of Bates \cite{Bates}. The Bates distribution has the
 advantage of being distributed along a fixed interval around a mean, with
 decreasing probability for values further from the mean.
 A mean of zero and variance of $1/12n * 5$,
