--- a/jgdfit/references.bib
+++ b/jgdfit/references.bib
@@ -1,31 +1,33 @@
-@misc{FPS,
-  TITLE= {FAI Sporting Code, Section 6
-International Aerobatic Events
-Statistical Method for Processing Scores
-Version 2018-1},
-  URL= {https://www.fai.org/sites/default/files/documents/section6_part1_appendixfps_v2018_1.pdf}
+@misc{fps,
+  title={FAI Sporting Code, Section 6 International Aerobatic Events Statistical Method for Processing Scores Version 2018-1},
+  howpublished={\url{https://www.fai.org/sites/default/files/documents/section6_part1_appendixfps_v2018_1.pdf}},
+  url={https://www.fai.org/sites/default/files/documents/section6_part1_appendixfps_v2018_1.pdf}
 }
 @misc{Bates,
-  TITLE = {Bates Distribution},
-  HOWPUBLISHED = {Wikipedia},
-  URL = { https://en.wikipedia.org/wiki/Bates_distribution }
+  title={Bates Distribution},
+  publisher={Wikipedia},
+  howpublished={\url{https://en.wikipedia.org/wiki/Bates_distribution}},
+  url={https://en.wikipedia.org/wiki/Bates_distribution}
 }
 @misc{BruceET,
     TITLE = {Test fit of discrete data distribution to normal distribution},
     AUTHOR = {BruceET (https://stats.stackexchange.com/users/85665/bruceet)},
-    HOWPUBLISHED = {Cross Validated},
+    publisher = {Cross Validated},
     NOTE = {URL:https://stats.stackexchange.com/q/422115 (version: 2019-08-14)},
     EPRINT = {https://stats.stackexchange.com/q/422115},
+    howpublished={\url{https://stats.stackexchange.com/q/422115}},
     URL = {https://stats.stackexchange.com/q/422115}
 }
 @misc{greenclust,
-  URL = {https://cran.r-project.org/package=greenclust},
   TITLE = {Combine Categories Using Greenacre's Method},
   AUTHOR = {Jeff Letton},
-  HOWPUBLISHED = {CRAN},
+  PUBLISHER = {CRAN},
+  howpublished={\url{https://cran.r-project.org/package=greenclust}},
+  URL = {https://cran.r-project.org/package=greenclust},
   NOTE = {GitHub:https://github.com/JeffJetton/greenclust}
 }
-@misc{Greenacre,
+@article{Greenacre,
+  title="Clustering the rows and columns of a contingency table",
   NOTE = {Greenacre, M.J. Journal of Classification (1988) 5: 39. https://doi.org/10.1007/BF01901670},
   AUTHOR = {Greenacre, M.J.},
   JOURNAL = {Journal of Classification},
@@ -33,11 +35,55 @@ Version 2018-1},
   VOLUME = {5}, ISSUE = {39},
   URL = {https://doi.org/10.1007/BF01901670}
 }
-@misc{partitioning,
+@article{partitioning,
   AUTHOR = {Jackson, B, et. al.},
   TITLE = {An algorithm for optimal partitioning of data on an interval},
   JOURNAL = {IEEE Signal Processing Letters},
   VOLUME = 12,
   ISSUE = 2,
   YEAR = 2005
+}
+@article{pettitt-ks,
+  author = { A. N.   Pettitt  and  M. A.   Stephens },
+  title = {The Kolmogorov-Smirnov Goodness-of-Fit Statistic with Discrete and Grouped Data},
+  journal = {Technometrics},
+  volume = {19},
+  number = {2},
+  pages = {205-210},
+  year  = {1977},
+  publisher = {Taylor & Francis},
+  doi = {10.1080/00401706.1977.10489529},
+  URL = {
+          https://www.tandfonline.com/doi/abs/10.1080/00401706.1977.10489529
+  },
+  eprint = {
+          https://www.tandfonline.com/doi/pdf/10.1080/00401706.1977.10489529
+  }
+  ,
+  abstract = { This paper considers the Kolmogorov-Smirnov two-sided goodness-of-fit statistic when applied to discrete or grouped data, The exact distribution of the statistic is tabulated for a given case and approximations discussed. The power of the test is compared with the power of the x 2 test, and the test is shown to have greater power for particular trend alternatives. }
+}
+@inproceedings{lemkol,
+  author = {Lemeshko, Boris and E.V, Chimitova and S.S, Kolesnikov},
+  year = {2007},
+  month = {05},
+  pages = {},
+  title = {Nonparametric Goodness-of-Fit Tests for Discrete, Grouped or Censored Data}
+}
+@misc{wac,
+  title="World Aerobatic Championships",
+  publisher="Wikipedia",
+  howpublished={\url{https://en.wikipedia.org/wiki/FAI_World_Aerobatic_Championships}},
+  url={https://en.wikipedia.org/wiki/FAI_World_Aerobatic_Championships},
+}
+@misc{civa-results,
+  title="CIVA Results",
+  publisher="CIVA",
+  howpublished={\url{https://civa-results.com/}},
+  url={https://civa-results.com/},
+}
+@misc{iaccdb,
+  title="IAC Contests",
+  publisher="International Aerobatic Club",
+  howpublished={\url{https://iaccdb.iac.org/}},
+  url={https://iaccdb.iac.org/},
 }
