Add an abstract

--- a/jgdfit/main.tex
+++ b/jgdfit/main.tex
@@ -2,7 +2,7 @@
 
 \title{Distribution of grades from aerobatic judges, goodness of fit to normal}
 \author{Douglas Lovell}
-\date{November, 2019}
+\date{Draft, November, 2019}
 
 \usepackage{newclude}
 \usepackage{url}
@@ -11,6 +11,14 @@
 
 \begin{document}
 \maketitle
+\begin{abstract}
+  The sport of competition aerobatics is flown by pilots and graded by
+  judges observing from the ground.
+  Aerobatic competitions at the world level are scored using a statistical
+  scoring system that treats judge grades as if they are normally distributed.
+  This paper reports goodness of fit to normal for judge grades from a large
+  number of aerobatic contests.
+\end{abstract}
 \include*{grading}
 \include*{cluster}
 \include*{shapiro}
