Motivate the cluster and shapiro sections and add references

--- a/jgdfit/cluster.tex
+++ b/jgdfit/cluster.tex
@@ -1,4 +1,4 @@
-\section{Clustering for Chi-Square}
+\subsection{Clustering for Chi-Square}
 
 In order to apply the Chi-Square metric, we need to cluster grades which
 were given by the judge less than six times together with neighboring
