--- a/jgdfit/grading.tex
+++ b/jgdfit/grading.tex
@@ -67,7 +67,7 @@ CIVA contests use a statistical system of converting judge grades to scores
 documented in the FAI sporting code as FPS \cite{fps}.
 The system normalizes judge grades using their mean and standard deviation,
 then determines upper and lower bounds based upon the mean and standard
-deviation of all of the grades from all of the judges. It then replaces
+deviation of the grades from all of the judges. It then replaces
 individual judge grades exceeding these bounds with fitted (mean, normalized)
 grade values before computing a final score for each pilot.
 
@@ -76,6 +76,5 @@ grades from figure groups, which usually consist of grades for
 one figure flown by all of the pilots in one flight program, and with all
 of the grades from one flight program.
 
-This paper examines whether the distribution of judge grades from
-aerobatic contests fit the normal distribution as used by the CIVA
-FPS.
+This paper examines whether the distribution of individual judge grades from
+aerobatic contests fit the normal distribution as used by the CIVA FPS.
