--- a/jgdfit/main.tex
+++ b/jgdfit/main.tex
@@ -20,6 +20,7 @@
   number of aerobatic contests.
 \end{abstract}
 \include*{grading}
+\include*{measurements}
 \include*{cluster}
 \include*{shapiro}
 \include*{results_all}
