Provide reference for power of AD test

--- a/jgdfit/references.bib
+++ b/jgdfit/references.bib
@@ -43,6 +43,13 @@
   ISSUE = 2,
   YEAR = 2005
 }
+@inproceedings{steele,
+  author = {Michael Steel, Janet Chaseling and Cameron Hurst},
+  title = {Comparing the Simulated Power of Discrete Goodness-of-fit Tests for Small Sample Sizes},
+  booktitle = {ASIMMOD},
+  year=2007,
+  pages={210-216},
+}
 @article{pettitt-ks,
   author = { A. N.   Pettitt  and  M. A.   Stephens },
   title = {The Kolmogorov-Smirnov Goodness-of-Fit Statistic with Discrete and Grouped Data},
