--- a/jgdfit/results_all.tex
+++ b/jgdfit/results_all.tex
@@ -119,7 +119,12 @@ third quantile value,
 demonstating that more than three-quarters of the values fall below the mean.
 
 We can look at plots of the distributions to find more insights about the
-fits. We show two plots side-by-side for representative p-values from the
+fits.
+One power study \cite{steele} finds that the Anderson-Darling test is
+among three most powerful. It has high correspondence with the other
+tests.
+In the following, we show two plots side-by-side for representative p-values
+from the
 Anderson-Darling measure. The left plot is a histogram of the judge grades
 with derived normal curve superimposed. The right plot is a standard Q-Q
 plot using the derived normal curve.
