Add FPS groups results report

--- a/jgdfit/results_all.tex
+++ b/jgdfit/results_all.tex
@@ -1,13 +1,8 @@
-\section{Judge grade distributions for all figures}
+\subsection{All figures}
 
 We now look at distributions of all of the grades given by a judge for
-a given flight-- all pilots and all figures. We look only at flights for
-which there were more than five pilots and more than eleven grades given.
-
-We also look only at flights in which all of the pilots flew the same figures.
-To do so, we select for the flight format, taking only Known, Unknown, second
-unknown, second and third known flights. The distribution of flight formats is
-as in Table \ref{tab:allformat}:
+a given flight-- all pilots and all figures.
+The distribution of flight formats is as in Table \ref{tab:allformat}.
 
 \begin{table}[tbp]
   \centering
@@ -15,7 +10,7 @@ as in Table \ref{tab:allformat}:
   Known & Unknown & Unknown II & Flight 1 \\
   1488 & 1160 & 27 & 19 \\
   \end{tabular}
-  \caption{Distribution of flight formatsn for all-figures measurements}
+  \caption{Distribution of flight formats for all-figures measurements}
   \label{tab:allformat}
 \end{table}
 
