--- a/jgdfit/main.tex
+++ b/jgdfit/main.tex
@@ -23,7 +23,9 @@
 \include*{measurements}
 \include*{cluster}
 \include*{shapiro}
+\include*{results}
 \include*{results_all}
+\include*{results_fps}
 
 \bibliographystyle{plain}
 \bibliography{references}
